--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,230 +1,169 @@
-.main {
+.Home h2 {
+  font-size: 20px;
+}
+
+/* Featured Categories */
+.FeaturedCategories {
+  margin-top: 60px;
+}
+
+.Categories {
+  margin-top: 20px;
   display: flex;
-  flex-direction: column;
   justify-content: space-between;
-  align-items: center;
-  padding: 6rem;
-  min-height: 100vh;
 }
 
-.description {
-  display: inherit;
-  justify-content: inherit;
-  align-items: inherit;
-  font-size: 0.85rem;
-  max-width: var(--max-width);
-  width: 100%;
-  z-index: 2;
-  font-family: var(--font-mono);
-}
-
-.description a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 0.5rem;
-}
-
-.description p {
+.Categories .Category {
+  width: 236px;
+  height: 236px;
   position: relative;
-  margin: 0;
-  padding: 1rem;
-  background-color: rgba(var(--callout-rgb), 0.5);
-  border: 1px solid rgba(var(--callout-border-rgb), 0.3);
-  border-radius: var(--border-radius);
+  border-radius: 4px;
+  transition: all ease 0.3s;
 }
 
-.code {
-  font-weight: 700;
-  font-family: var(--font-mono);
+.Categories .Category:hover {
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
 }
 
-.grid {
-  display: grid;
-  grid-template-columns: repeat(4, minmax(25%, auto));
-  max-width: 100%;
-  width: var(--max-width);
-}
-
-.card {
-  padding: 1rem 1.2rem;
-  border-radius: var(--border-radius);
-  background: rgba(var(--card-rgb), 0);
-  border: 1px solid rgba(var(--card-border-rgb), 0);
-  transition: background 200ms, border 200ms;
-}
-
-.card span {
-  display: inline-block;
-  transition: transform 200ms;
-}
-
-.card h2 {
-  font-weight: 600;
-  margin-bottom: 0.7rem;
-}
-
-.card p {
-  margin: 0;
-  opacity: 0.6;
-  font-size: 0.9rem;
-  line-height: 1.5;
-  max-width: 30ch;
-  text-wrap: balance;
-}
-
-.center {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  padding: 4rem 0;
-}
-
-.center::before {
-  background: var(--secondary-glow);
-  border-radius: 50%;
-  width: 480px;
-  height: 360px;
-  margin-left: -400px;
-}
-
-.center::after {
-  background: var(--primary-glow);
-  width: 240px;
-  height: 180px;
-  z-index: -1;
-}
-
-.center::before,
-.center::after {
-  content: "";
-  left: 50%;
+.Categories .Category .Image {
   position: absolute;
-  filter: blur(45px);
-  transform: translateZ(0);
 }
 
-.logo {
+.Categories .Category .Image img {
+  width: 100%;
+}
+
+.Categories .Category .Desc {
+  width: 100%;
+  height: 70%;
+  color: #fff;
+  background: linear-gradient(0deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0) 100%);
+  position: absolute;
+  bottom: 0;
+  z-index: 1;
+  border-bottom-right-radius: 4px;
+  border-bottom-left-radius: 4px;
+}
+
+.Categories .Category .Desc div {
+  width: 100%;
+  padding: 12px;
+  position: absolute;
+  bottom: 0;
+}
+
+.Categories .Category .Desc h3 {
+  margin: 0;
+}
+
+.Categories .Category .Desc h3 a {
+  font-size: 16px !important;
+}
+
+.Categories .Category .Desc a {
+  color: #fff;
+  font-size: 14px;
+  font-weight: 600;
+  display: flex;
+}
+
+.Categories .Category .Desc a svg {
+  width: 20px;
+  height: 20px;
+  margin-right: 5px;
   position: relative;
-}
-/* Enable hover only on non-touch devices */
-@media (hover: hover) and (pointer: fine) {
-  .card:hover {
-    background: rgba(var(--card-rgb), 0.1);
-    border: 1px solid rgba(var(--card-border-rgb), 0.15);
-  }
-
-  .card:hover span {
-    transform: translateX(4px);
-  }
+  right: 0;
+  transition: all ease 0.3s;
 }
 
-@media (prefers-reduced-motion) {
-  .card:hover span {
-    transform: none;
-  }
+.Categories .Category .Desc a:hover svg {
+  right: -5px;
 }
 
-/* Mobile */
-@media (max-width: 700px) {
-  .content {
-    padding: 4rem;
-  }
-
-  .grid {
-    grid-template-columns: 1fr;
-    margin-bottom: 120px;
-    max-width: 320px;
-    text-align: center;
-  }
-
-  .card {
-    padding: 1rem 2.5rem;
-  }
-
-  .card h2 {
-    margin-bottom: 0.5rem;
-  }
-
-  .center {
-    padding: 8rem 0 6rem;
-  }
-
-  .center::before {
-    transform: none;
-    height: 300px;
-  }
-
-  .description {
-    font-size: 0.8rem;
-  }
-
-  .description a {
-    padding: 1rem;
-  }
-
-  .description p,
-  .description div {
-    display: flex;
-    justify-content: center;
-    position: fixed;
-    width: 100%;
-  }
-
-  .description p {
-    align-items: center;
-    inset: 0 0 auto;
-    padding: 2rem 1rem 1.4rem;
-    border-radius: 0;
-    border: none;
-    border-bottom: 1px solid rgba(var(--callout-border-rgb), 0.25);
-    background: linear-gradient(
-      to bottom,
-      rgba(var(--background-start-rgb), 1),
-      rgba(var(--callout-rgb), 0.5)
-    );
-    background-clip: padding-box;
-    backdrop-filter: blur(24px);
-  }
-
-  .description div {
-    align-items: flex-end;
-    pointer-events: none;
-    inset: auto 0 0;
-    padding: 2rem;
-    height: 200px;
-    background: linear-gradient(
-      to bottom,
-      transparent 0%,
-      rgb(var(--background-end-rgb)) 40%
-    );
-    z-index: 1;
-  }
+.Categories .Category .Desc p {
+  margin-top: 7px;
+  font-size: 14px;
 }
 
-/* Tablet and Smaller Desktop */
-@media (min-width: 701px) and (max-width: 1120px) {
-  .grid {
-    grid-template-columns: repeat(2, 50%);
-  }
+/* Bestsellers */
+.BestSellers {
+  margin-top: 60px;
+  margin-bottom: 60px;
 }
 
-@media (prefers-color-scheme: dark) {
-  .vercelLogo {
-    filter: invert(1);
-  }
-
-  .logo {
-    filter: invert(1) drop-shadow(0 0 0.3rem #ffffff70);
-  }
+.Products {
+  margin: 0 -10px;
+  display: flex;
 }
 
-@keyframes rotate {
-  from {
-    transform: rotate(360deg);
-  }
-  to {
-    transform: rotate(0deg);
-  }
+.Products .Product {
+  width: 230px;
+  height: 380px;
+  margin: 0 10px;
+  box-shadow: 0px 3px 6px #00000012;
+  border-radius: 4px;
+  transition: all ease 0.3s;
+}
+
+.Products .Product:hover {
+  box-shadow: 0px 10px 8px #00000012;
+}
+
+.Products .Product .Image {
+  height: 250px;
+  overflow: hidden;
+}
+
+.Products .Product .Image img {
+  width: 100%;
+}
+
+.Products .Product .Desc {
+  padding: 10px;
+}
+
+.Products .Product .Desc .Name {
+  height: 90px;
+}
+
+.Products .Product h3 {
+  margin: 0;
+  font-size: 14px;
+}
+
+.Products .Product h4 {
+  margin: 10px 0 0;
+  font-size: 12px;
+  font-weight: 400;
+  color: #444;
+}
+
+.Products .Product .Login span {
+  font-size: 12px;
+  font-style: italic;
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.WhyUs {
+  margin: 100px 0 40px;
+}
+
+.WhyUs .Container {
+  height: 320px;
+  padding: 30px 470px 30px 30px;
+  background-color: #eaf5ff;
+  background-image: url("/assets/imgs/why-us.png");
+  background-repeat: no-repeat;
+  background-position: 95% center;
+}
+
+.WhyUs p {
+  line-height: 28px;
+}
+
+.WhyUs a {
+  font-size: 14px;
+  text-decoration: underline;
+  color: #127ad3;
 }
