--- a/src/app/products/page.module.css
+++ b/src/app/products/page.module.css
@@ -20,11 +20,15 @@
   font-size: 16px;
 }
 
+.Filters li {
+  cursor: pointer;
+}
+
 .Filters li + li {
   margin-top: 12px;
 }
 
-.Filters .Filter a.Active {
+.Filters .Filter .Active {
   color: #03956e;
   font-weight: 600;
 }
@@ -52,10 +56,18 @@
   margin: 0;
 }
 
-.Products {
+/* .Products {
   margin-top: 30px;
-}
+} */
 
 .ProductsList {
   margin-top: 15px;
+}
+
+.LoadMore {
+  margin: 0 auto;
+  margin-top: 20px;
+  width: 100px;
+  text-align: center;
+  cursor: pointer;
 }
