--- a/src/components/Product/Product.module.css
+++ b/src/components/Product/Product.module.css
@@ -1,7 +1,7 @@
 .Product {
-  width: 220px;
+  width: 221px;
   height: 380px;
-  margin: 0 0 20px;
+  margin: 0 9px;
   box-shadow: 0px 3px 6px #00000012;
   border-radius: 4px;
   transition: all ease 0.3s;
