--- a/src/app/sign-up/page.module.css
+++ b/src/app/sign-up/page.module.css
@@ -14,6 +14,23 @@
   border-top: 5px solid #03956e;
 }
 
+.Notes a {
+  text-decoration: underline;
+  color: #03956e;
+}
+
+.ResendSuccess {
+  display: flex;
+  align-items: center;
+}
+
+.ResendSuccess svg {
+  width: 22px;
+  height: 22px;
+  margin-right: 5px;
+  color: #03956e;
+}
+
 .SignUpFormWrapper {
   width: 800px;
   margin-top: 40px;
