--- a/src/components/SignInForm/SignInForm.module.css
+++ b/src/components/SignInForm/SignInForm.module.css
@@ -8,7 +8,7 @@
 }
 
 .SignInForm .SignUp {
-  padding: 40px 0 0 45px;
+  padding: 20px 0 10px 45px;
   border-left: 1px solid #f1f1f1;
 }
 
@@ -21,4 +21,8 @@
     display: flex;
     align-items: center;
     cursor: pointer;
+}
+
+.ResetSuccess {
+  padding: 10px;
 }
