--- a/src/components/Product/Product.module.css
+++ b/src/components/Product/Product.module.css
@@ -1,7 +1,7 @@
 .Product {
   width: 221px;
   height: 380px;
-  margin: 0 9px;
+  margin: 0 9px 18px;
   box-shadow: 0px 3px 6px #00000012;
   border-radius: 4px;
   transition: all ease 0.3s;
@@ -14,6 +14,13 @@
 .Product .Image {
   height: 250px;
   overflow: hidden;
+  display: flex;
+  align-items: center;
+}
+
+.Product .Image a {
+  width: 100%;
+  display: block;
 }
 
 .Product .Image img {
