--- a/src/components/Product/Product.module.css
+++ b/src/components/Product/Product.module.css
@@ -2,13 +2,14 @@
   width: 221px;
   height: 380px;
   margin: 0 9px 18px;
-  box-shadow: 0px 3px 6px #00000012;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1);
   border-radius: 4px;
   transition: all ease 0.3s;
+  background-color: #fff;
 }
 
 .Product:hover {
-  box-shadow: 0px 10px 8px #00000012;
+  box-shadow: 0px 3px 12px rgba(0, 0, 0, 0.15);
 }
 
 .Product .Image {
