--- a/src/app/checkout/page.module.css
+++ b/src/app/checkout/page.module.css
@@ -67,7 +67,7 @@
 .ShippingAddress .ChangeAddress {
   margin-top: 20px;
   cursor: pointer;
-  color: #03956e;
+  color: #378532;
 }
 
 .AddNewAddress {
@@ -75,7 +75,7 @@
 }
 
 .AddNewBtn {
-  color: #03956e;
+  color: #378532;
   cursor: pointer;
 }
 
