--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -37,7 +37,7 @@
   width: 100%;
   height: 90%;
   color: #fff;
-  background: linear-gradient(0deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0) 100%);
+  background: linear-gradient(0deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0) 60%);
   position: absolute;
   bottom: 0;
   z-index: 1;
@@ -53,7 +53,8 @@
 }
 
 .Categories .Category .Desc h3 {
-  margin: 0;
+  height: 40px;
+  margin: 0 0 10px;
 }
 
 .Categories .Category .Desc h3 a {
@@ -89,6 +90,16 @@
 .BestSellers {
   margin-top: 60px;
   margin-bottom: 60px;
+}
+
+.BestSellers > div > div,
+.NewProducts > div > div {
+  margin: 0 -13px;
+}
+
+.BestSellers > div > div > div,
+.NewProducts > div > div > div {
+  margin: 0 13px 18px;
 }
 
 .Products {
@@ -152,7 +163,7 @@
 .WhyUs .Container {
   height: 320px;
   padding: 30px 470px 30px 30px;
-  background-color: #eaf5ff;
+  background-color: #C5E8C3;
   background-image: url("/assets/imgs/why-us.png");
   background-repeat: no-repeat;
   background-position: 95% center;
