--- a/src/app/sign-up/page.module.css
+++ b/src/app/sign-up/page.module.css
@@ -11,12 +11,12 @@
   padding: 20px;
   margin-top: 30px;
   background-color: #fff7ea;
-  border-top: 5px solid #03956e;
+  border-top: 5px solid #378532;
 }
 
 .Notes a {
   text-decoration: underline;
-  color: #03956e;
+  color: #378532;
 }
 
 .ResendSuccess {
@@ -28,7 +28,7 @@
   width: 22px;
   height: 22px;
   margin-right: 5px;
-  color: #03956e;
+  color: #378532;
 }
 
 .SignUpFormWrapper {
