--- a/src/components/FormikControl/Textarea/Textarea.module.css
+++ b/src/components/FormikControl/Textarea/Textarea.module.css
@@ -6,7 +6,7 @@
   border: 1px solid hsl(0, 0%, 80%);
   background-color: #fff;
   font-weight: 500;
-  resize: vertical;
+  resize: none;
 }
 
 .FormControl:focus,
