--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,5 +1,13 @@
-.Home h2 {
-  font-size: 20px;
+.Home .SubTitle {
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.Home .SubTitle h2 {
+  margin: 0;
+  font-size: 26px;
 }
 
 .MainSlider {
@@ -12,7 +20,6 @@
 }
 
 .Categories {
-  margin-top: 20px;
   display: flex;
   justify-content: space-between;
 }
@@ -96,13 +103,13 @@
   margin-bottom: 60px;
 }
 
-.BestSellers > div > div,
-.NewProducts > div > div {
+.BestSellers .ListItems > div,
+.NewProducts .ListItems > div {
   margin: 0 -13px;
 }
 
-.BestSellers > div > div > div,
-.NewProducts > div > div > div {
+.BestSellers .ListItems > div > div,
+.NewProducts .ListItems > div > div {
   margin: 0 13px 18px;
 }
 
@@ -161,16 +168,53 @@
 }
 
 .WhyUs {
-  margin: 100px 0 40px;
+  margin-top: 60px;
 }
 
-.WhyUs .Container {
-  height: 320px;
-  padding: 30px 470px 30px 30px;
-  background-color: #C5E8C3;
-  background-image: url("/assets/imgs/why-us.png");
-  background-repeat: no-repeat;
-  background-position: 95% center;
+.WhyUs .Overview {
+  padding: 20px 0;
+  display: flex;
+  background-color: #f6f6f6;
+}
+
+.WhyUs .Overview > div {
+  width: 25%;
+  padding: 10px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.WhyUs .Overview > div + div {
+  border-left: 1px solid #C5E8C3;
+}
+
+.WhyUs .Overview div > div:first-child {
+  font-size: 28px;
+}
+
+.WhyUs .Overview div svg {
+  color: #78c973;
+}
+
+.WhyUs .Overview div > div:last-child {
+  margin-top: 10px;
+  font-size: 20px;
+  text-transform: uppercase;
+  font-weight: 600;
+  color: #444;
+}
+
+.WhyUs .Content {
+  padding: 30px;
+  background-color: #c5e8c3;
+  display: flex;
+  align-items: center;
+}
+
+.WhyUs .Content div:last-child {
+  padding-left: 40px;
 }
 
 .WhyUs p {
@@ -181,4 +225,14 @@
   font-size: 14px;
   text-decoration: underline;
   color: #127ad3;
+}
+
+.Cetificates {
+  padding: 20px 0;
+  border-top: 1px solid #F3F3F3;
+}
+
+.Cetificates > div {
+  display: flex;
+  justify-content: center;
 }
