--- a/src/components/ShopMenu/ShopMenu.module.css
+++ b/src/components/ShopMenu/ShopMenu.module.css
@@ -2,11 +2,10 @@
   width: 685px;
   height: 340px;
   padding: 30px;
-  margin-top: 78px;
+  margin-top: 35px;
   background-color: #fff;
   box-shadow: 0px 3px 6px #0000000f;
   position: absolute;
-  left: 38%;
   z-index: 99;
   opacity: 0;
   visibility: hidden;
@@ -19,9 +18,10 @@
   align-items: center;
 }
 
-.ShopMenu .Head .Title {
+.ShopMenu .Head .Title a {
   text-transform: uppercase;
   font-weight: 600;
+  color: #222;
 }
 
 .ShopMenu .Head .CloseBtn svg {
@@ -35,6 +35,7 @@
 }
 
 .ShopMenu .Categories ul {
+  margin: 0;
   height: 240px;
   display: flex;
   flex-direction: column;
@@ -43,6 +44,10 @@
 
 .ShopMenu .Categories li {
   margin: 5px 0;
+}
+
+.ShopMenu .Categories a {
+  color: #222;
 }
 
 .ShopMenu .Categories a:hover {
@@ -55,6 +60,6 @@
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.3);
   left: 0;
-  top: 85px;
+  top: 129px;
   z-index: 8;
 }
