--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -18,7 +18,7 @@
 }
 
 .Primary {
-  background-color: #378532;
+  background-color: #3E9538;
 }
 
 .Primary:hover {
@@ -27,7 +27,7 @@
 }
 
 .Secondary {
-  color: #378532;
+  color: #3E9538;
   background-color: #C5E8C3;
 }
 
