--- a/src/components/ProductEnquiryBtn/ProductEnquiryBtn.module.css
+++ b/src/components/ProductEnquiryBtn/ProductEnquiryBtn.module.css
@@ -7,7 +7,7 @@
     flex-direction: column;
     justify-content: center;
     background-color: #C5E8C3;
-    color: #378532;
+    color: #3E9538;
     border-radius: 4px;
     align-items: center;
 }
