--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400;1,700&family=Quicksand:wght@400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500;600;700;800&display=swap");
 @import url(vendors/normalize.css);
 
 * {
@@ -9,6 +10,11 @@ body {
   font-family: "Lato", sans-serif;
   font-size: 14px;
   color: #222;
+}
+
+h1,
+h2 {
+  font-family: "Poppins", sans-serif;
 }
 
 .container {
@@ -44,7 +50,7 @@ ul li {
 }
 
 .page-content {
-  padding-top: 129px;
+  padding-top: 85px;
 }
 
 /* Form */
