--- a/src/app/contact-us/page.module.css
+++ b/src/app/contact-us/page.module.css
@@ -44,7 +44,7 @@
   padding: 20px;
   margin-top: 30px 12px 0;
   background-color: #fff7ea;
-  border-top: 5px solid #378532;
+  border-top: 5px solid #3E9538;
 }
 
 .FormActions {
