--- a/src/app/orders/[refId]/page.module.css
+++ b/src/app/orders/[refId]/page.module.css
@@ -28,7 +28,7 @@
 
 .OrderDetails h1 {
   margin-top: 0;
-  color: #378532;
+  color: #3E9538;
 }
 
 .OrderDetails h2 {
@@ -116,6 +116,6 @@
   padding: 20px;
   margin: 30px 0 20px;
   background-color: #fff7ea;
-  border-top: 5px solid #378532;
+  border-top: 5px solid #3E9538;
   font-size: 16px;
 }
