--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,3 +1,21 @@
+.Home .SubHeader {
+  background: #3E9538;
+}
+
+.Home .SubHeader > div {
+  height: 70px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.Home .SubHeader h1 {
+  margin: 0;
+  color: #fff;
+  font-weight: 600;
+  font-size: 38px;
+}
+
 .Home .SubTitle {
   margin-bottom: 20px;
   display: flex;
@@ -10,91 +28,63 @@
   font-size: 26px;
 }
 
-.MainSlider {
-  height: 440px;
+.Home .Intro {
+  padding: 30px 0;
+  margin-top: -4px;
+  background-color: #f0fcf7;
+}
+
+.Home .Intro > div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.Home .Intro h2 {
+  font-size: 52px;
+  line-height: 62px;
+  text-align: center;
+  font-weight: 700;
+  color: #3E9538;
+}
+
+.Home .Intro h3 {
+  text-align: center;
+  font-size: 42px;
+  line-height: 54px;
+  font-weight: 700;
+  font-family: "Poppins", sans-serif;
+  color: #3E9538;
+}
+
+.Home .Intro .Countries {
+  margin: 40px 0;
+  display: flex;
+}
+
+.Home .Message {
+  background-color: #ffe154;
+}
+
+.Home .Message > div {
+  height: 70px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.Home .Message h3 {
+  margin: 0;
+  font-size: 32px;
+  font-family: "Poppins", sans-serif;
+  font-weight: 700;
+  color: #444;
 }
 
 /* Featured Categories */
 .FeaturedCategories {
-  margin-top: 60px;
-}
-
-.Categories {
-  display: flex;
-  justify-content: space-between;
-}
-
-.Categories .Category {
-  width: 236px;
-  height: 236px;
-  position: relative;
-  border-radius: 4px;
-  transition: all ease 0.3s;
-}
-
-.Categories .Category:hover {
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-}
-
-.Categories .Category .Image {
-  position: absolute;
-}
-
-.Categories .Category .Image img {
-  width: 100%;
-}
-
-.Categories .Category .Desc {
-  width: 100%;
-  height: 90%;
-  color: #fff;
-  background: linear-gradient(0deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0) 60%);
-  position: absolute;
-  bottom: 0;
-  z-index: 1;
-  border-bottom-right-radius: 4px;
-  border-bottom-left-radius: 4px;
-}
-
-.Categories .Category .Desc div {
-  width: 100%;
-  padding: 12px;
-  position: absolute;
-  bottom: 0;
-}
-
-.Categories .Category .Desc h3 {
-  height: 40px;
-  margin: 0 0 10px;
-}
-
-.Categories .Category .Desc h3 a {
-  font-size: 16px !important;
-}
-
-.Categories .Category .Desc a {
-  color: #fff;
-  font-size: 14px;
-  font-weight: 600;
-  display: flex;
-}
-
-.Categories .Category .Desc a svg {
-  width: 20px;
-  height: 20px;
-  margin-right: 5px;
-  position: relative;
-  right: 0;
-  transition: all ease 0.3s;
-}
-
-.Categories .Category .Desc a:hover svg {
-  right: -5px;
-}
-
-.Categories .Category .Desc p {
-  margin-top: 7px;
-  font-size: 14px;
+  margin-top: 100px;
 }
 
 /* Bestsellers */
@@ -171,54 +161,49 @@
   margin-top: 60px;
 }
 
+.WhyUs .SubTitle {
+  margin-top: 80px;
+}
+
 .WhyUs .Overview {
   padding: 20px 0;
   display: flex;
-  background-color: #f6f6f6;
+  background-color: #f1f1f1;
 }
 
 .WhyUs .Overview > div {
   width: 25%;
-  padding: 10px 0;
+  padding: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
 }
 
 .WhyUs .Overview > div + div {
-  border-left: 1px solid #C5E8C3;
+  border-left: 1px solid #ccc;
 }
 
-.WhyUs .Overview div > div:first-child {
-  font-size: 28px;
-}
-
-.WhyUs .Overview div svg {
-  color: #78c973;
+.WhyUs .Overview div > div > div:first-child {
+  font-size: 42px;
+  color: #3E9538;
 }
 
 .WhyUs .Overview div > div:last-child {
   margin-top: 10px;
-  font-size: 20px;
-  text-transform: uppercase;
+  font-size: 16px;
   font-weight: 600;
   color: #444;
+  text-align: center;
 }
 
 .WhyUs .Content {
   padding: 30px;
-  background-color: #c5e8c3;
-  display: flex;
-  align-items: center;
-}
-
-.WhyUs .Content div:last-child {
-  padding-left: 40px;
+  background-color: #ffe154;
 }
 
 .WhyUs p {
-  line-height: 28px;
+  font-size: 20px;
+  line-height: 38px;
 }
 
 .WhyUs a {
@@ -228,11 +213,11 @@
 }
 
 .Cetificates {
-  padding: 20px 0;
-  border-top: 1px solid #F3F3F3;
+  margin: 40px 0;
 }
 
-.Cetificates > div {
+.Cetificates ul {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
+  align-items: center;
 }
