--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,16 +1,16 @@
 .Footer {
-  padding: 50px 0 20px;
-  background-color: #378532;
   color: #fff;
+  background-color: #3e9538;
 }
 
 .Footer .ContentWrapper {
+  padding: 20px 15px;
   margin: 0 -10px;
   display: flex;
 }
 
 .Footer .ContentWrapper > div {
-  padding: 0 1px;
+  padding: 0;
   flex-grow: 1;
 }
 
@@ -48,7 +48,7 @@
 }
 
 .Terms {
-  margin-top: 50px;
+  padding: 30px 0;
   display: flex;
   justify-content: center;
 }
