--- a/src/components/LoginBtn/LoginBtn.module.css
+++ b/src/components/LoginBtn/LoginBtn.module.css
@@ -1,6 +1,6 @@
 .LoginBtn {
     padding: 10px;
-    border-top: 2px solid #378532;
+    border-top: 2px solid #3E9538;
     background-color: #fff7ea;
 }
 
@@ -10,7 +10,7 @@
 
 .LoginBtn span,
 .LoginBtn a {
-    color: #378532;
+    color: #3E9538;
     text-decoration: underline;
     cursor: pointer;
 }
