--- a/src/components/MainMenu/MainMenu.module.css
+++ b/src/components/MainMenu/MainMenu.module.css
@@ -3,7 +3,7 @@
   margin-top: 85px;
   display: flex;
   align-items: center;
-  background-color: #378532;
+  background-color: #3E9538;
   position: fixed;
   z-index: 98;
 }
@@ -59,5 +59,5 @@
 }
 
 /* .MainMenu .ShopBtn.Active span {
-  color: #378532;
+  color: #3E9538;
 } */
