--- a/src/components/Purchase/Purchase.module.css
+++ b/src/components/Purchase/Purchase.module.css
@@ -14,13 +14,13 @@
 }
 
 .Sizes .Size.Active {
-  border: 2px solid #378532;
+  border: 2px solid #3E9538;
   background-color: #fff7ea;
 }
 
 .Sizes .Size:hover {
   background-color: #fff7ea;
-  border: 2px solid #378532;
+  border: 2px solid #3E9538;
 }
 
 .Sizes .Size + .Size {
@@ -56,7 +56,7 @@
 .PricingList {
   padding: 30px 0 0 30px;
   cursor: pointer;
-  color: #378532;
+  color: #3E9538;
   text-decoration: underline;
 }
 
