--- a/src/app/checkout/page.module.css
+++ b/src/app/checkout/page.module.css
@@ -13,7 +13,7 @@
 .ContentRight {
   width: 25%;
   padding: 20px;
-  background-color: #fff7ea;
+  background-color: #FFF0AB;
 }
 
 .Product {
@@ -83,7 +83,6 @@
   margin: 0 0 30px;
   font-size: 17px;
   text-transform: uppercase;
-  color: #666;
 }
 
 .TotalAmount {
