--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,9 +1,9 @@
 .Home .SubHeader {
-  background: #3E9538;
+  background: #3e9538;
 }
 
 .Home .SubHeader > div {
-  height: 70px;
+  height: 55px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -13,7 +13,11 @@
   margin: 0;
   color: #fff;
   font-weight: 600;
-  font-size: 38px;
+  font-size: 32px;
+}
+
+.MainSlider {
+  min-height: 435px;
 }
 
 .Home .SubTitle {
@@ -46,7 +50,7 @@
   line-height: 62px;
   text-align: center;
   font-weight: 700;
-  color: #3E9538;
+  color: #3e9538;
 }
 
 .Home .Intro h3 {
@@ -55,7 +59,7 @@
   line-height: 54px;
   font-weight: 700;
   font-family: "Poppins", sans-serif;
-  color: #3E9538;
+  color: #3e9538;
 }
 
 .Home .Intro .Countries {
@@ -64,7 +68,7 @@
 }
 
 .Home .Message {
-  background-color: #ffe154;
+  background-color: #3e9538;
 }
 
 .Home .Message > div {
@@ -79,7 +83,7 @@
   font-size: 32px;
   font-family: "Poppins", sans-serif;
   font-weight: 700;
-  color: #444;
+  color: #fff;
 }
 
 /* Featured Categories */
@@ -169,6 +173,7 @@
   padding: 20px 0;
   display: flex;
   background-color: #f1f1f1;
+  border-radius: 5px;
 }
 
 .WhyUs .Overview > div {
@@ -185,7 +190,7 @@
 
 .WhyUs .Overview div > div > div:first-child {
   font-size: 42px;
-  color: #3E9538;
+  color: #3e9538;
 }
 
 .WhyUs .Overview div > div:last-child {
@@ -199,6 +204,7 @@
 .WhyUs .Content {
   padding: 30px;
   background-color: #ffe154;
+  border-radius: 5px;
 }
 
 .WhyUs p {
