--- a/src/app/products/[id]/page.module.css
+++ b/src/app/products/[id]/page.module.css
@@ -84,7 +84,7 @@
   width: 25%;
   padding: 15px;
   border-radius: 4px;
-  background-color: #f9f9f9;
+  background-color: #FFF0AB;
 }
 
 .Documents h3 {
