--- a/src/app/products/page.module.css
+++ b/src/app/products/page.module.css
@@ -11,7 +11,7 @@
 .Filters {
   padding: 0 20px;
   flex: 0 0 260px;
-  background-color: #f7f7f7;
+  background-color: #FFF0AB;
   border-radius: 12px;
 }
 
