--- a/src/components/RegionSelector/RegionSelector.module.css
+++ b/src/components/RegionSelector/RegionSelector.module.css
@@ -9,7 +9,7 @@
   padding: 0 16px;
   display: flex;
   align-items: center;
-  background-color: #f7f7f7;
+  background-color: #eee;
   font-weight: 600;
   cursor: pointer;
   border-radius: 2px;
@@ -19,7 +19,7 @@
 
 .RegionSelector .Selector:hover,
 .RegionSelector .Selector.Active {
-  background-color: #e9e9e9;
+  background-color: #fff0ab;
 }
 
 .RegionSelector .Selector > div + div {
