--- a/src/components/Category/Category.module.css
+++ b/src/components/Category/Category.module.css
@@ -31,9 +31,9 @@
 }
 
 .Category .Desc a {
-  color: #222;
   font-size: 14px;
-  font-weight: 600;
+  line-height: 20px;
+  font-weight: 500;
   display: flex;
 }
 
