--- a/src/components/FormikControl/Checkbox/Checkbox.module.css
+++ b/src/components/FormikControl/Checkbox/Checkbox.module.css
@@ -35,12 +35,12 @@
   height: 16px;
   width: 16px;
   border-radius: 2px;
-  border: 1px solid #5dc900;
+  border: 1px solid #25B9E6;
   background-color: transparent;
 }
 
 .Checkbox input:checked ~ .Checkmark {
-  background-color: #5dc900;
+  background-color: #25B9E6;
 }
 
 .Checkbox .Checkmark:after {
