--- a/src/components/ProductEnquiryBtn/ProductEnquiryBtn.module.css
+++ b/src/components/ProductEnquiryBtn/ProductEnquiryBtn.module.css
@@ -6,8 +6,8 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background-color: #C5E8C3;
-    color: #3E9538;
+    background-color: #3E56FE;
+    color: #fff;
     border-radius: 4px;
     align-items: center;
 }
