--- a/src/components/SideMenu/SideMenu.module.css
+++ b/src/components/SideMenu/SideMenu.module.css
@@ -44,6 +44,6 @@
 
 .Menu a:hover,
 .Menu a.Active {
-  background-color: #fff7ea;
-  color: #25b9e6;
+  background-color: #fff0ab;
+  color: #3E56FE;
 }
