--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -11,6 +11,10 @@ body {
   color: #222;
 }
 
+h1, h2, h3, h4 {
+  font-weight: 600;
+}
+
 .container {
   width: 1460px;
   margin: 0 auto;
@@ -31,7 +35,7 @@ a {
 }
 
 a:hover {
-  color: #1dc2d7;
+  color: #3E56FE;
 }
 
 ul {
@@ -126,12 +130,12 @@ ul li {
   height: 16px;
   width: 16px;
   border-radius: 2px;
-  border: 1px solid #25b9e6;
+  border: 1px solid #3E56FE;
   background-color: transparent;
 }
 
 .checkbox input:checked ~ .checkmark {
-  background-color: #25b9e6;
+  background-color: #3E56FE;
 }
 
 .checkbox .checkmark:after {
@@ -236,7 +240,7 @@ table tbody tr button {
   padding: 0.5rem 0.75rem;
   margin-left: -1px;
   line-height: 1.25;
-  color: #25b9e6;
+  color: #3E56FE;
   background-color: #fff;
   border: 1px solid #eee;
   cursor: default;
@@ -247,7 +251,7 @@ table tbody tr button {
 }
 
 .pagination .page-item.active .page-link {
-  background-color: #25b9e6;
+  background-color: #3E56FE;
   color: #fff;
 }
 
