--- a/src/components/RegionSelector/RegionSelector.module.css
+++ b/src/components/RegionSelector/RegionSelector.module.css
@@ -9,17 +9,18 @@
   padding: 0 16px;
   display: flex;
   align-items: center;
-  background-color: #eee;
+  background-color: #3E56FE;
   font-weight: 600;
   cursor: pointer;
-  border-radius: 2px;
-  color: #222;
+  border-radius: 4px;
+  color: #fff;
   transition: all ease 0.3s;
 }
 
 .RegionSelector .Selector:hover,
 .RegionSelector .Selector.Active {
   background-color: #fff0ab;
+  color: #3E56FE;
 }
 
 .RegionSelector .Selector > div + div {
