--- a/src/components/Regions/Regions.module.css
+++ b/src/components/Regions/Regions.module.css
@@ -6,7 +6,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  border: 1px solid #ccc;
+  border: 1px solid#3E56FE;
   font-size: 24px;
   font-family: "Poppins", sans-serif;
   font-weight: 600;
@@ -25,6 +25,6 @@
 }
 
 .Region.Active:hover {
-  background-color: #FDC311;
+  background-color: #3E56FE;
   color: #fff;
 }
