--- a/src/components/SearchBox/SearchBox.module.css
+++ b/src/components/SearchBox/SearchBox.module.css
@@ -17,19 +17,20 @@
 .SearchInput input {
   height: 44px;
   padding: 0 70px 0 20px;
-  font-size: 16px;
+  font-size: 14px;
   background-repeat: no-repeat;
   background-position: center right;
   border-radius: 22px;
   background-color: #f7f7f7;
-  border: 1px solid #bbb;
+  border: 1px solid #3E56FE;
   transition: all ease 0.3s;
 }
 
+.SearchInput input:hover,
 .SearchInput input:focus,
 .SearchInput input:active {
   background-color: #fff0ab;
-  border: 1px solid #bbb;
+  border: 1px solid #3E56FE;
 }
 
 .SubmitBtn {
