--- a/src/components/Purchase/Purchase.module.css
+++ b/src/components/Purchase/Purchase.module.css
@@ -14,13 +14,13 @@
 }
 
 .Sizes .Size.Active {
-  border: 2px solid #3E9538;
-  background-color: #fff7ea;
+  border: 2px solid #3E56FE;
+  background-color: #FFF0AB;
 }
 
 .Sizes .Size:hover {
-  background-color: #fff7ea;
-  border: 2px solid #3E9538;
+  background-color: #FFF0AB;
+  border: 2px solid #3E56FE;
 }
 
 .Sizes .Size + .Size {
@@ -56,7 +56,7 @@
 .PricingList {
   padding: 30px 0 0 30px;
   cursor: pointer;
-  color: #3E9538;
+  color: #3E56FE;
   text-decoration: underline;
 }
 
