--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -17,7 +17,7 @@
 }
 
 .MainSlider {
-  min-height: 650px;
+  height: 597px;
 }
 
 .Home .SubTitle {
@@ -35,7 +35,7 @@
 
 .Home .Intro {
   padding: 30px 0;
-  margin-top: -4px;
+  margin-top: -5px;
   background-color: #FEE63E;
 }
 
