--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -35,7 +35,7 @@ a {
 }
 
 a:hover {
-  color: #3E56FE;
+  color: #00A1E0;
 }
 
 ul {
@@ -48,7 +48,7 @@ ul li {
 }
 
 .page-content {
-  padding-top: 85px;
+  padding-top: 140px;
 }
 
 /* Form */
@@ -130,12 +130,12 @@ ul li {
   height: 16px;
   width: 16px;
   border-radius: 2px;
-  border: 1px solid #3E56FE;
+  border: 1px solid #00A1E0;
   background-color: transparent;
 }
 
 .checkbox input:checked ~ .checkmark {
-  background-color: #3E56FE;
+  background-color: #00A1E0;
 }
 
 .checkbox .checkmark:after {
@@ -251,7 +251,7 @@ table tbody tr button {
 }
 
 .pagination .page-item.active .page-link {
-  background-color: #3E56FE;
+  background-color: #00A1E0;
   color: #fff;
 }
 
