--- a/src/app/checkout/page.module.css
+++ b/src/app/checkout/page.module.css
@@ -69,7 +69,7 @@
 .ShippingAddress .ChangeAddress {
   margin-top: 20px;
   cursor: pointer;
-  color: #3E56FE;
+  color: #00A1E0;
 }
 
 .AddNewAddress {
@@ -77,7 +77,7 @@
 }
 
 .AddNewBtn {
-  color: #3E56FE;
+  color: #00A1E0;
   cursor: pointer;
 }
 
