--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,5 +1,9 @@
 .Home .SubHeader {
-  background: #2C318D;
+  width: 100%;
+  margin-top: 85px;
+  background: #01216A;
+  position: fixed;
+  z-index: 9;
 }
 
 .Home .SubHeader > div {
@@ -30,13 +34,14 @@
 .Home .SubTitle h2 {
   margin: 0;
   font-size: 26px;
-  color: #2C318D;
+  color: #00A1E0;
 }
 
 .Home .Intro {
   padding: 30px 0;
   margin-top: -5px;
-  background-color: #FEE63E;
+  background-image: url("/assets/imgs/honey-bg.jpg");
+  background-size: auto 100%;
 }
 
 .Home .Intro > div {
@@ -51,7 +56,7 @@
   line-height: 90px;
   text-align: center;
   font-weight: 700;
-  color: #3E56FE;
+  color: #00A1E0;
 }
 
 .Home .Intro h3,
@@ -61,7 +66,7 @@
   line-height: 54px;
   font-weight: 700;
   font-family: "Poppins", sans-serif;
-  color: #3E56FE;
+  color: #00A1E0;
 }
 
 .Home .Intro h3 a {
@@ -74,7 +79,7 @@
 }
 
 .Home .Message {
-  background-color: #2C318D;
+  background-color: #00A1E0;
   height: 70px;
   display: flex;
   align-items: center;
@@ -85,7 +90,7 @@
   margin: 0;
   font-size: 2.7em;
   font-family: "Poppins", sans-serif;
-  font-weight: 700;
+  font-weight: 600;
   color: #fff;
 }
 
@@ -185,6 +190,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  color: #01216A;
 }
 
 .WhyUs .Overview > div + div {
@@ -193,7 +199,6 @@
 
 .WhyUs .Overview div > div > div:first-child {
   font-size: 42px;
-  color: #3E56FE;
 }
 
 .WhyUs .Overview div > div:last-child {
@@ -201,30 +206,24 @@
   font-size: 16px;
   line-height: 24px;
   font-weight: 600;
-  color: #444;
   text-align: center;
 }
 
 .WhyUs .Content {
   padding: 30px;
-  background-color: #FEE63E;
+  background-color: #00A1E0;
   border-radius: 5px;
+  color: #fff;
 }
 
 .WhyUs .Content span {
   font-weight: 600;
-  color: #3E56FE;
+  color: #01216A;
 }
 
 .WhyUs p {
   font-size: 20px;
   line-height: 38px;
-}
-
-.WhyUs a {
-  font-size: 14px;
-  text-decoration: underline;
-  color: #127ad3;
 }
 
 .Cetificates {
