--- a/src/components/ProductEnquiryBtn/ProductEnquiryBtn.module.css
+++ b/src/components/ProductEnquiryBtn/ProductEnquiryBtn.module.css
@@ -6,7 +6,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background-color: #3E56FE;
+    background-color: #00A1E0;
     color: #fff;
     border-radius: 4px;
     align-items: center;
