--- a/src/app/checkout/page.module.css
+++ b/src/app/checkout/page.module.css
@@ -1,3 +1,7 @@
+.Checkout {
+  min-height: 650px;
+}
+
 .Details {
   display: flex;
   justify-content: space-between;
@@ -69,7 +73,7 @@
 .ShippingAddress .ChangeAddress {
   margin-top: 20px;
   cursor: pointer;
-  color: #00A1E0;
+  color: #0000B2;
 }
 
 .AddNewAddress {
@@ -77,7 +81,7 @@
 }
 
 .AddNewBtn {
-  color: #00A1E0;
+  color: #0000B2;
   cursor: pointer;
 }
 
