--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,7 +1,7 @@
 .Home .SubHeader {
   width: 100%;
   margin-top: 85px;
-  background: #01216A;
+  background: #0000B2;
   position: fixed;
   z-index: 9;
 }
@@ -34,7 +34,7 @@
 .Home .SubTitle h2 {
   margin: 0;
   font-size: 26px;
-  color: #00A1E0;
+  color: #0000B2;
 }
 
 .Home .Intro {
@@ -56,7 +56,7 @@
   line-height: 90px;
   text-align: center;
   font-weight: 700;
-  color: #00A1E0;
+  color: #0000B2;
 }
 
 .Home .Intro h3,
@@ -66,11 +66,15 @@
   line-height: 54px;
   font-weight: 700;
   font-family: "Poppins", sans-serif;
-  color: #00A1E0;
+  color: #0000B2;
 }
 
 .Home .Intro h3 a {
   text-decoration: underline;
+}
+
+.Home .Intro h3 a:hover{
+  color: #1919FF;
 }
 
 .Home .Intro .Countries {
@@ -79,7 +83,7 @@
 }
 
 .Home .Message {
-  background-color: #00A1E0;
+  background-color: #0000B2;
   height: 70px;
   display: flex;
   align-items: center;
@@ -190,7 +194,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  color: #01216A;
+  color: #0000B2;
 }
 
 .WhyUs .Overview > div + div {
@@ -211,14 +215,13 @@
 
 .WhyUs .Content {
   padding: 30px;
-  background-color: #00A1E0;
+  background-color: #0000B2;
   border-radius: 5px;
   color: #fff;
 }
 
 .WhyUs .Content span {
   font-weight: 600;
-  color: #01216A;
 }
 
 .WhyUs p {
