--- a/src/components/RegionSelector/RegionSelector.module.css
+++ b/src/components/RegionSelector/RegionSelector.module.css
@@ -9,7 +9,7 @@
   padding: 0 16px;
   display: flex;
   align-items: center;
-  background-color: #00A1E0;
+  background-color: #0000B2;
   font-weight: 600;
   cursor: pointer;
   border-radius: 4px;
@@ -20,7 +20,7 @@
 .RegionSelector .Selector:hover,
 .RegionSelector .Selector.Active {
   background-color: #fff0ab;
-  color: #00A1E0;
+  color: #0000B2;
 }
 
 .RegionSelector .Selector > div + div {
@@ -86,7 +86,7 @@
 }
 
 .RegionSelector .Regions .Region:hover {
-  background-color: #e9e9e9;
+  background-color: #fff0ab;
 }
 
 .RegionSelector .Regions .Region .RegionName {
