--- a/src/components/SearchBox/SearchBox.module.css
+++ b/src/components/SearchBox/SearchBox.module.css
@@ -22,7 +22,7 @@
   background-position: center right;
   border-radius: 22px;
   background-color: #f7f7f7;
-  border: 1px solid #00A1E0;
+  border: 1px solid #0000B2;
   transition: all ease 0.3s;
 }
 
@@ -30,7 +30,7 @@
 .SearchInput input:focus,
 .SearchInput input:active {
   background-color: #fff0ab;
-  border: 1px solid #00A1E0;
+  border: 1px solid #0000B2;
 }
 
 .SubmitBtn {
@@ -55,11 +55,11 @@
 .SubmitBtn svg {
   width: 18px;
   height: 18px;
-  color: #585858;
+  color: #0000b2;
 }
 
 .SearchResults {
-  width: 500px;
+  width: 560px;
   margin-top: 58px;
   background-color: #fff;
   box-shadow: 0px 3px 6px #0000000f;
@@ -78,7 +78,7 @@
 }
 
 .SearchResults .Results li:hover {
-  background-color: #e9e9e9;
+  background-color: #fff0ab;
 }
 
 .Overlay {
