Two shades of blue

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -2,8 +2,8 @@
   width: 100%;
   position: fixed;
   z-index: 99;
-  background-color: #0000B2;
-  border-bottom: 1px solid #999;
+  background-color: #0A0A5F;
+  border-bottom: 1px solid #666;
 }
 
 .HeaderWrap {
